force-app/main/default/objects/Trainer__c/fields/Number_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Hours__c</fullName>
    <label>Number Of Hours</label>
    <summarizedField>Learner__c.Duration_of_Class__c</summarizedField>
    <summaryForeignKey>Learner__c.Trainer_Name_for_Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>