force-app/main/default/objects/Trainer__c/fields/Trainer_Education__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Education__c</fullName>
    <label>Trainer Education</label>
    <length>50</length>
    <type>Text</type>
</CustomField>